...
                
                VStack (alignment: .leading, spacing: 8) {
                    Text("제철요리 이름")
                        .font(.system(size: 13, weight: .regular))
                        .foregroundStyle(.mdCoolgray90)
                    
                    TextField("제철요리 이름을 입력해 주세요. (최대 22자)", text: $input)
                        .padding(.vertical, 16)
                        .padding(.horizontal, 10)
                        .background(
                            RoundedRectangle(cornerRadius: 8)
                                .stroke()
                                .foregroundStyle(.mdCoolgray20)
...
                }
                
                Button {
                    dishName = input
                    isPresent.toggle()
                } label: {
                    Text("추가하기")
                        .frame(width: UIScreen.main.bounds.width - 90) //temp
                        .font(.system(size: 14, weight: .semibold))
                        .foregroundStyle(enableAdding ? .white : .mdCoolgray60)
                }
                .frame(maxWidth: .infinity)
                .padding(14)
...
