...
//                        } label: {
//                            Text("🏠 홈화면")
//                        }
//                        Button {
//                            navigationManager.navigate(to: AppRoute.detailView)
//                        } label: {
//                            Text("🌽 옥수수 제철음식 상세화면")
//                        }
//                        
//                        NavigationLink(destination: JoinView()) {
//                            Text("🙌 회원가입")
//                            
//                        }
...
