...
            }
            .padding(.horizontal, 8)
            
            VStack (spacing: 8) {
                HStack{
                    HStack (spacing: 4) {
                        Text("투표기간 | 25.07.07~25.07.13")
                    }
                    .padding(.vertical, 4)
                    .padding(.horizontal, 8)
                    .background(.mdCoolgray10.opacity(0.5))
                    .cornerRadius(16)
                    Spacer()
...
